--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -6,9 +6,9 @@
     tools:context=".LeagueFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_league"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="League Fragment" />
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
