--- a/app/src/main/res/layout/card_league.xml
+++ b/app/src/main/res/layout/card_league.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardCornerRadius="6dp"
-    card_view:cardElevation="3dp"
-    card_view:cardUseCompatPadding="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="12dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:id="@+id/card_league"
+    card_view:cardBackgroundColor="#FFFF"
+    card_view:cardCornerRadius="8dp"
+    card_view:contentPadding="10dp"
+    android:foreground="?selectableItemBackground"
+    android:clickable="true">
 
-    <TextView
-        android:id="@+id/tv_leagueName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="League Name"
-        android:textColor="@color/cardTitleTextView"/>
+        <ImageView
+            android:layout_width="42dp"
+            android:layout_height="42dp"/>
+
+        <TextView
+            android:id="@+id/tv_leagueName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="League Name"
+            android:textColor="@color/cardTitleTextView" />
+
 </androidx.cardview.widget.CardView>
